--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="">
+<html lang="pt-br">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,9 +26,8 @@
         <p>@ludmila__monteiro</p>
       </div>
 
-      <div id="switch">
-        <button>
-        </button>
+      <div id="switch" onclick="toggleMode()">
+        <button></button>
         <span></span>
       </div>
       <ul>
@@ -71,5 +70,7 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+    ><script src="script.js"></script>
   </body>
 </html>
